Docs: separate "JavaFX on the classpath" from "starts the toolkit"
The developer guide said the tests "are not meant to start the JavaFX
toolkit -- the three core classes are deliberately JavaFX-free", which
reads as no test touching JavaFX at all. ViewerVisibilityContractTest
does: it builds a real OverlayOptions so it can assert on
isHidden(PathObject) rather than on a mock, which touches javafx.base
collections and properties. It starts no toolkit, which is why classpath
JavaFX still works with no extra flags.

A contributor reading the old paragraph would conclude either that the
test breaks the rule or that --add-modules is the way to add one like it.
It is not: these are classpath jars, not modules, and the flag fails to
resolve them. Mirrors the warning 430b4e2/ec8276e put in build.gradle.kts
so the two do not drift.

Contributing rule changes from "Tests stay JavaFX-free" to "No test
starts the JavaFX toolkit" -- the rule that is actually true and actually
load-bearing.

Claude-Session: https://claude.ai/code/session_01BVNi8BV1fjmP9wwJxee2J7